ggplot2 0.6.1  (2008-XX-XX)
----------------------------------------

  * character and logical vectors now reliably treated as discrete scales
  * can use color instead of colour, and old R names throughout ggplot2
  * qplot now gains asp argument to set aspect ratio
  * scales: extra scales now correctly ignored (again)
  * scale_size: improved documentation for discrete variables
  * ggsave now correctly uses dpi for raster devices, default dpi changed to 72 (thanks to Brian Ripley for pointing this out)
  * qplot now does a better of building the data frame when not explicitly supplied
  * qplot now treats any arguments wrapped in I() as parameters, not aesthetics:
    * qplot(mpg, wt, data=mtcars, colour = I("red"))
    * qplot(mpg, wt, data=mtcars, size = I(5))
  * geom_segment should now work correctly in all coordinate systems
  * order of legends reversed to match order of x axis (and to be consistent with previous versions)
  * background colour of legends key matches plot
  * documentation improvements: facet_grid


See CHANGELOG for changes in previous versions