@@ -2,8 +2,8 @@ ScaleGrey <- proto(ScaleColour, expr={
   doc <- TRUE
   common <- c("colour", "fill")
 
-  new <- function(., name=NULL, variable, start = 0.2, end = 0.8, labels=NULL) {
-    .$proto(name=name, .input=variable, .output=variable, start=start, end=end, .labels = labels)
+  new <- function(., name=NULL, variable, start = 0.2, end = 0.8, limits=NULL, labels=NULL) {
+    .$proto(name=name, .input=variable, .output=variable, start=start, end=end, .limits = limits, .labels = labels)
   }
 
   breaks <- function(.) {
