@@ -2,8 +2,8 @@ ScaleManual <- proto(ScaleDiscrete, {
   common <- c("colour","fill","size","shape","linetype")
   .values <- c()
   
-  new <- function(., name=NULL, values=NULL, variable="x") {
-    .$proto(name=name, .values=values, .input=variable, .output=variable)
+  new <- function(., name=NULL, values=NULL, variable="x", limits = NULL, labels = NULL) {
+    .$proto(name=name, .values=values, .input=variable, .output=variable, .limits = limits, .labels = labels)
   }
 
   map <- function(., values) {
